# ModellingAssingment

./: AMatrix.cpp  AMatrix.h  CMakeLists.txt  Capacitance.cpp  Capacitance.h  Component.h  CurrentSource.cpp  CurrentSource.h  Inductance.cpp  Inductance.h  Matrix.cpp  Resistance.cpp  Resistance.h  VoltageSource.cpp  VoltageSource.h  ZMatrix.cpp  ZMatrix.h  main.cpp
TestCases/: Test2Output.txt
includes/: AMatrix.h  Capacitance.h  Component.h  CurrentSource.h  Inductance.h  Matrix.h  Resistance.h  VoltageSource.h  XMatrix.h  ZMatrix.h  matplotlibcpp.h
src/: AMatrix.cpp  Capacitance.cpp  Component.cpp  CurrentSource.cpp  Inductance.cpp  Resistance.cpp  VoltageSource.cpp  XMatrix.cpp  ZMatrix.cpp  main.cpp
